--- a/СrossAppBot/СrossAppBot.csproj
+++ b/СrossAppBot/СrossAppBot.csproj
@@ -5,9 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Discord.Net" Version="3.12.0" />
+    <PackageReference Include="Discord.Net" Version="3.13.1" />
+    <PackageReference Include="SharpToken" Version="1.2.17" />
     <PackageReference Include="Telegram.Bot" Version="19.0.0" />
-    <PackageReference Include="VkNet" Version="1.76.0" />
+    <PackageReference Include="VkNet" Version="1.78.0" />
   </ItemGroup>
 
 </Project>
